# account_remover

./: .gitignore  README.md  _requirements.txt  app.py  bd_test_insert.py  graph_test.py  ms_bot_framework_config.py  ping.csv  project_settings.py  pyproject.toml  remover.py  requirements.txt  run.py  startup.sh  tst.csv  tst_p.py  workers.py
.az_devops_pipelines/: prod-iva-zip-build-nazvyazku-worker.yml
graph/: graph_api_2.py  graph_async_client.py  graph_client.py
helpers/: hero_card_helper.py  ping_helper.py
lib/: email_helpers.py  exceptions.py  helpers.py  logger.py  messages.py  otp_email_helper.py  storage_blob_helper.py
setup/: aioredis_client.py  db.py  redis_client.py  standalone_bot_adapter.py
